fixed button alignment

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -278,7 +278,7 @@ nav ul li a {
 
 .about-down-arrow {
     position: relative;
-    top: 40%;
+    top: 20%;
     text-align: center;
 }
 
